kubernetes/namespaces/loki/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loki-gateway
  namespace: loki
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: loki-basic-auth
    nginx.ingress.kubernetes.io/auth-realm: "Loki"
spec:
  tls:
  - hosts:
      - "*.pydis.wtf"
    secretName: pydis.wtf-tls
  rules:
  - host: loki-gateway.pydis.wtf
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: loki-gateway
            port:
              number: 80
